tests/rosetta/out/Smalltalk/checkpoint-synchronization-1.out
/tmp/checkpoint-synchronization-1.st:6: parse error, expected ']'
