tests/rosetta/out/Smalltalk/checkpoint-synchronization-1.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| partList nAssemblies cycle p |
partList := {'A'. 'B'. 'C'. 'D'}.
nAssemblies := 3.
1 to: (nAssemblies + 1) do: [:cycle |.
Transcript show: ((('begin assembly cycle ') + ((cycle asString)))) printString; cr.
partList do: [:p |.
Transcript show: ((p + (' worker begins part'))) printString; cr.
].
.
partList do: [:p |.
Transcript show: ((p + (' worker completes part'))) printString; cr.
].
.
Transcript show: ((((('assemble.  cycle ') + ((cycle asString)))) + (' complete'))) printString; cr.
].
.
